updated gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ Assets/Firebase/
 Assets/Firebase.meta
 Assets/ExternalDependencyManager/
 Assets/ExternalDependencyManager.meta
-Assets/Editor Default Resources/Firebase/
+Assets/Editor Default Resources/
 Assets/google-services.json
 Assets/google-services.json.meta
 Assets/StreamingAssets/google-services-desktop.json
